--- a/records/templates/login.html
+++ b/records/templates/login.html
@@ -1,7 +1,8 @@
+{% load static %}
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
 <head>
-<img src="image/log.png" width="100%" height="300" align="center" />
+
 
 <!--------------------
 LOGIN FORM
@@ -14,7 +15,7 @@ www.umatechzone.com
 <title>Login to health record department</title>
 
 <!--STYLESHEETS-->
-<link href="css/style.css" rel="stylesheet" type="text/css" />
+<link href="{% static 'css/style.css' %}" rel="stylesheet" type="text/css" />
 
 <!--SCRIPTS-->
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.2.6/jquery.min.js"></script>
@@ -37,7 +38,8 @@ $(document).ready(function() {
 });
 </script>
 </head>
-<body bgcolor="#123456">
+<body bgcolor="#123456" background: url({% static 'image/bg.png' %}) repeat;>
+<img src="{% static 'image/log.png' %}" width="100%" height="300" align="center" />
 
 <!--WRAPPER-->
 <div id="wrapper">
